# Path-Finder

./: .gitignore  README.md
assemblyscript/: README.md
assemblyscript/assembly/: baker_api.ts  navmesh.ts  navmesh_api.ts  pathfinder.ts  pathfinder_api.ts  rvo_api.ts  rvo_kd_tree.ts  rvo_obstacle.ts
assemblyscript/assembly/baker/: navmesh_baker.ts  rc_area.ts  rc_calcs.ts  rc_classes.ts  rc_constants.ts  rc_contour.ts  rc_filtering.ts  rc_heightfield.ts  rc_mesh.ts  rc_rasterization.ts
assemblyscript/assembly/common/: binary_io.ts  exports.ts  list.ts  utilities.ts  (+1 more)
playcanvas_tutorial/: README.md  level_navmesh.txt  tutorial.md
python/: README.md  baker_examples.py  bvh_examples.py  explorer_main.py  graph_examples.py  level_polygons.txt  level_triangles.txt  map_01.txt  map_01_points.txt  navmesh_examples.py  rvo_examples.py  test.py
python/binary_rvo/: rvo2.cp36-win_amd64.pyd  rvo2.cp37-win_amd64.pyd  rvo2.cp38-win_amd64.pyd  rvo2.cp39-win_amd64.pyd
python/explorer_app/: navmesh_explorer_main_widget.py  select_colors_widget.py  simulate_thread.py  utilities.py
python/navmesh/: __init__.py  navmesh_bvh.py  navmesh_node.py
python/pathfinder/: __init__.py
rust/pathfinder/: .gitignore  Cargo.toml  README.md
rust/pathfinder/src/: lib.rs  main.rs
wasm/: README.md  asconfig.json  grid_graph_test.js  navmesh.ts  navmesh.wasm  navmesh_bvh.ts  navmesh_graph.ts  navmesh_node.ts  package-lock.json  package.json
wasm/assembly/: list.ts  navmesh_bvh.ts  navmesh_graph.ts  navmesh_node.ts  pathfinder.ts  rvo_agent.ts  rvo_simulator.ts  utilities.ts  vector2.ts
(+33 files in other folders)
